/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine_examples.pingh.mentions;

import "spine/options.proto";

option (type_url_prefix) = "type.pingh.spine.io";
option java_package = "io.spine.examples.pingh.mentions.event";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "spine_examples/pingh/mentions/identifiers.proto";
import "spine_examples/pingh/github/values.proto";
import "google/protobuf/timestamp.proto";

// The mention has been read.
message MentionRead {

    // The ID of the mention.
    MentionId id = 1;
}

// The mention has been snoozed until the specified time.
message MentionSnoozed {

    // The ID of the mention.
    MentionId id = 1;

    // The time until which the mention was snoozed.
    google.protobuf.Timestamp until_when = 2 [(required) = true];
}

// The mention's snooze time passed, so it changed status from `SNOOZED` to `UNREAD`.
message MentionUnsnoozed {

    // The ID of the mention.
    MentionId id = 1;

    // The user who created the mention.
    spine_examples.pingh.github.User who_mentioned = 2 [(required) = true];

    // The title of the GitHub page in which the mention occurred.
    string title = 3 [(required) = true];

    // The time when the user was mentioned.
    google.protobuf.Timestamp when_mentioned = 4 [(required) = true];

    // The repository where the user was mentioned.
    spine_examples.pingh.github.Repo where_mentioned = 5 [(required) = true];
}

// The mention was pinned at the top of the mentions list.
message MentionPinned {

    // The ID of the mention.
    MentionId id = 1;
}

// The mention was unpinned from the top of the mentions list.
message MentionUnpinned {

    // The ID of the mention.
    MentionId id = 1;
}

// The mention was archived because it was deemed obsolete.
message MentionArchived {

    // The ID of the mention.
    MentionId id = 1;
}
